ChangeLog 'ClusteringSuite'

2018-04-16 German Llort <german.llort@bsc.es>
	* Fixed LD_LIBRARY_PATH to look for libraries under lib and lib64

2017-10-31 German Llort <german.llort@bsc.es>
	+ Added backwards compatibility to the old pcfparser

2016-06-30 German Llort <german.llort@bsc.es>
	+ Added macro to search for the libstdc++ path to add an rpath. 

2016-03-31 German Llort <german.llort@bsc.es>
	* Upgraded pcfparser to the version found in the libtools package v1.0.4

2016-03-23 German Llort <german.llort@bsc.es>
	* Fixed wrong dependency with MPI when enabling the TDBSCAN support: it was hardcoded to use Marenostrum's OpenMPI, now is specified at configure time with --with-mpi.

2016-03-21 German Llort <german.llort@bsc.es>
	* Fixed namespace conflict in #define MPI with Intel MPI and OpenMPI

2016-03-11 Eloy Martinez <eloy.martinez@bsc.es>
	* Fixed system messages for proper updates of the progress within Paraver

2015-12-17 German Llort <german.llort@bsc.es>
	* Updated boost.m4 

2015-11-06 German Llort <german.llort@bsc.es>
	* Fixed bug in the parsing of the PCF file for the description of hardware counter events.

2015-11-04 German Llort <german.llort@bsc.es>
	* Fixed bug in the parsing of intercommunicators in the input trace.
	* Upgraded revision to 2.6.6.

2015-10-14 German Llort <german.llort@bsc.es>
	* Code adapted to use Synapse library 2.0 instead of the older version libmrnapp.

2015-01-23 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a regression that broke the sampling version of the
	clustering tool

	* Added a routine in the Utilities to print a backtrace

2015-01-15 Juan Gonzalez <juan.gonzalez@bsc.es>
	* New feature to indicate the time unit used in the 'duration_filter'
	of the clustering definition XML. The possible time units are:
	- 'D' for days
	- 'H' for hours
	- 'M' for minutes
	- 's' or 'S' for minutes
	- 'm' for miliseconds
	- 'u' for microseconds (default if no time unit is given)
	- 'n' nanoseconds
