@@ -2,9 +2,6 @@
 MAJOR=2
 MINOR=6
 REV=6
-sh -c "svnversion -n . | cut -d: -f2 | cut -dS -f1 | tr -d '\n'" > ./SVN_VERSION
-SVN_VERSION=`cat ./SVN_VERSION`
-#VERSION="$MAJOR.$MINOR.$REV-svn$SVN_VERSION"
 VERSION=$MAJOR.$MINOR.$REV
 
 if test -e ./configure.ac; then
